# fakeapi-extractor-test

./: .gitignore  README.md  pyproject.toml
extractor/: app.py
tests/: test_app.py
