[project]
name = "extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "chris mitchell",email = "chris@chrismitchell.xyz"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.25.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "boto3 (>=1.37.16,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
pytest = "^8.3.5"

